# clean_notetaker

./: .env.example  .gitignore  README.md  ai_client.py  extractor.py  main.py  notes_writer.py  prompts.py  pyproject.toml  stats.py  strip_strings.txt.example
